--- a/commands.html
+++ b/commands.html
@@ -258,13 +258,8 @@
                         <td>Adminisztrátor</td>
                     </tr>
                     <tr data-command="farewell">
-                        <td>farewell<br>● beállítás <code>csatorna</code> <code>leírás</code> <code class="optional">cím</code> <code class="optional">fejléc</code> <code class="optional">kép</code> <code class="optional">szín</code> <code class="optional">ikon</code> <code class="optional">timestamp</code><br>● kikapcsolás<br>● beállított<br>● segítség</td>
+                        <td>farewell<br>● beállítás <code>csatorna</code> <code>leírás</code> <code class="optional">cím</code> <code class="optional">fejléc</code> <code class="optional">kép</code> <code class="optional">szín</code> <code class="optional">ikon</code> <code class="optional">timestamp</code><br>● kikapcsolás<br>● beállított<br>● súgó</td>
                         <td>Egyedi búcsúüzenet beállítása, törlése vagy megtekintése, ami a tagok kilépésekor a megadott csatornában lesz megjelenítve.</td>
-                        <td>Adminisztrátor</td>
-                    </tr>
-                    <tr data-command="logchannel">
-                        <td>logchannel<br>● beállítás <code>csatorna</code><br>● kikapcsolás<br>● beállított</td>
-                        <td>sasOS által végrehajtott moderálások a megadott csatornába való küldésének kezelése.</td>
                         <td>Adminisztrátor</td>
                     </tr>
                     <tr data-command="membercounter">
@@ -272,9 +267,9 @@
                         <td>Tagokat számláló csatorna létrehozása, beállított csatorna frissítése, vagy törlése.</td>
                         <td>Adminisztrátor</td>
                     </tr>
-                    <tr data-command="modsettings">
-                        <td>modsettings<br>● módosítás <code>küldés</code> <code>logolás</code> <code>dm</code><br>● beállítások</td>
-                        <td>Beállítható, hogy a sasOS által végzett moderációk el legyenek küldve a csatornába, fel legyenek jegyezve, illetve el legyenek küldve privát üzenetben.</td>
+                    <tr data-command="modconfig">
+                        <td>modconfig<br>● konfigurálás<br>&emsp;○ küldés <code data-param-index="1">bekapcsolás</code><br>&emsp;○ mentés <code data-param-index="2">bekapcsolás</code><br>&emsp;○ dm <code data-param-index="3">bekapcsolás</code><br>● logcsatorna<br>&emsp;○ beállítás <code>csatorna</code><br>&emsp;○ kikapcsolás<br>● beállítások</td>
+                        <td>sasOS által végzett moderációk viselkedéseinek konfigurálása (üzenetküldés a csatornába, moderációk mentése, privát üzenetküldés), log-csatorna kezelése és beállítások megjelenítése.</td>
                         <td>Adminisztrátor</td>
                     </tr>
                     <tr data-command="permissions">
@@ -298,7 +293,7 @@
                         <td>Adminisztrátor</td>
                     </tr>
                     <tr data-command="welcome">
-                        <td>welcome<br>● beállítás <code>csatorna</code> <code>leírás</code> <code class="optional">cím</code> <code class="optional">fejléc</code> <code class="optional">kép</code> <code class="optional">szín</code> <code class="optional">ikon</code> <code class="optional">timestamp</code><br>● kikapcsolás<br>● beállított<br>● segítség</td>
+                        <td>welcome<br>● beállítás <code>csatorna</code> <code>leírás</code> <code class="optional">cím</code> <code class="optional">fejléc</code> <code class="optional">kép</code> <code class="optional">szín</code> <code class="optional">ikon</code> <code class="optional">timestamp</code><br>● kikapcsolás<br>● beállított<br>● súgó</td>
                         <td>Egyedi üdvözlő üzenet beállítása, törlése vagy megtekintése, ami a tagok csatlakozásakor a megadott csatornában lesz megjelenítve.</td>
                         <td>Adminisztrátor</td>
                     </tr>
