--- a/commands.html
+++ b/commands.html
@@ -69,7 +69,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="col" colspan="3">Moderálás</th>
+                        <th scope="col" colspan="3">Moderáció</th>
                     </tr>
                     <tr data-command="ban">
                         <td>ban <code>tag</code> <code class="optional">indok</code> <code class="optional">időtartam</code> <code class="optional">törlés</code></td>
@@ -303,7 +303,7 @@
                         <td>Adminisztrátor</td>
                     </tr>
                     <tr>
-                        <th scope="col" colspan="3">Egyéb</th>
+                        <th scope="col" colspan="3">Sokszínű</th>
                     </tr>
                     <tr data-command="8ball generic">
                         <td>8ball <code>kérdés</code> <code class="optional">megjelenítés</code></td>
