--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div class="col-12"><h3>Korszerű moderációs parancsok, korábbi eljárások mentése</h3></div>
                     </div>
                     <div class="row">
-                        <div class="col-12"><img class="img-fluid gif" src="media/ban.gif" alt="A kitiltás parancsának bemutatása indok és időtartam megadásával."></div>
+                        <div class="col-12"><img class="img-fluid gif" src="https://raw.githubusercontent.com/sassvagyok/sasOS-data/refs/heads/main/media/ban.gif" alt="A kitiltás parancsának bemutatása indok és időtartam megadásával."></div>
                     </div>
                     <div class="row">
                         <div class="col-12"><p class="command-showcase">Tagok kitiltása, kirúgása, felfüggesztése és figyelmeztetése</p></div>
@@ -73,7 +73,7 @@
                         <div class="col-12"><h3>Zenék lejátszása könnyedén, több száz oldalról</h3></div>
                     </div>
                     <div class="row">
-                        <div class="col-12"><img class="img-fluid gif" src="media/play.gif" alt="A lejátszás parancsának bemutatása 'epic gaming music' paraméter megadásával."></div>
+                        <div class="col-12"><img class="img-fluid gif" src="https://raw.githubusercontent.com/sassvagyok/sasOS-data/refs/heads/main/media/cc.gif" alt="A lejátszás parancsának bemutatása 'epic gaming music' paraméter megadásával."></div>
                     </div>
                     <div class="row">
                         <div class="col-12"><p class="command-showcase">Lejátszás | Zeneszöveg keresése | Megkeverés | Filterek alkalmazása</p></div>
@@ -95,7 +95,7 @@
                         <div class="col-12"><h3>Egyedi funkciók hozzáadása a szerveredhez</h3></div>
                     </div>
                     <div class="row">
-                        <div class="col-12"><img class="img-fluid gif" src="media/cc.gif" alt="Az egyedi parancs hozzáadásának bemutatása 'sasos' nevű paranccsal és 'A legjobb bot' válasz megadásával."></div>
+                        <div class="col-12"><img class="img-fluid gif" src="https://raw.githubusercontent.com/sassvagyok/sasOS-data/refs/heads/main/media/play.gif" alt="Az egyedi parancs hozzáadásának bemutatása 'sasos' nevű paranccsal és 'A legjobb bot' válasz megadásával."></div>
                     </div>
                     <div class="row">
                         <div class="col-12"><p class="command-showcase">Egyedi parancsok létrehozása | Üdvözlő- és Búcsúüzenet beállítása</p></div>
@@ -117,7 +117,7 @@
                         <div class="col-12"><h3>További parancsok és funkciók</h3></div>
                     </div>
                     <div class="row">
-                        <div class="col-12"><img class="img-fluid gif" src="media/userinfo.gif" alt="Információk lekérése felhasználókról bemutatása 'matte' nevű felhasználóról."></div>
+                        <div class="col-12"><img class="img-fluid gif" src="https://raw.githubusercontent.com/sassvagyok/sasOS-data/refs/heads/main/media/userinfo.gif" alt="Információk lekérése felhasználókról bemutatása 'matte' nevű felhasználóról."></div>
                     </div>
                     <div class="row">
                         <div class="col-12"><p class="command-showcase">Információk a szerverről, tagokról | Profilképek lekérése</p></div>
