--- a/commands.html
+++ b/commands.html
@@ -51,7 +51,7 @@
                 <caption class="text-center">
                     <details>
                         <summary>Súgó</summary>
-                        <table class="table table-hover commands legend">
+                        <table class="table table-striped table-hover commands legend">
                             <thead>
                                 <tr>
                                     <th scope="col" class="command-column">Parancs</th>
@@ -60,6 +60,9 @@
                                 </tr>
                             </thead>
                             <tbody>
+                                <tr>
+                                    <th scope="col" colspan="3">Kategória</th>
+                                </tr>
                                 <tr data-command="example">
                                     <td>parancs <code>paraméter1</code> <code class="optional">paraméter2</code></td>
                                     <td>Parancs paraméterekkel.</td>
@@ -269,7 +272,7 @@
                     <tr data-command="customcommand">
                         <td>customcommand<br>● hozzáadás <code>parancs</code> <code>válasz</code><br>● szerkesztés <code>parancs</code> <code>válasz</code><br>● törlés <code>parancs</code><br>● parancsok</td>
                         <td>Egyedi parancsok hozzáadása, szerkesztése, törlése és megnézése (max. 50).</td>
-                        <td>Adminisztrátor</td>
+                        <td>Adminisztrátor*</td>
                     </tr>
                     <tr data-command="djrole">
                         <td>djrole<br>● beállítás <code>rang</code><br>● kikapcsolás<br>● beállított</td>
@@ -434,7 +437,7 @@
                     </tr>
                     <tr>
                         <td>status</td>
-                        <td>Válaszidők, jelenlegi uptime és szerverek számának megtekintése.</td>
+                        <td>Aktuális verzió, válaszidő, uptime és szerverek számának kijelzése.</td>
                         <td>-</td>
                     </tr>
                 </tbody>
