--- a/commands.html
+++ b/commands.html
@@ -270,7 +270,7 @@
                         <td>Adminisztrátor</td>
                     </tr>
                     <tr data-command="customcommand">
-                        <td>customcommand<br>● hozzáadás <code>parancs</code> <code>válasz</code><br>● szerkesztés <code>parancs</code> <code>válasz</code><br>● törlés <code>parancs</code><br>● parancsok</td>
+                        <td>customcommand<br>● hozzáadás <code data-param-index="1">parancs</code> <code data-param-index="1">válasz</code><br>● szerkesztés <code data-param-index="2">parancs</code> <code data-param-index="2">válasz</code><br>● törlés <code data-param-index="2">parancs</code><br>● parancsok</td>
                         <td>Egyedi parancsok hozzáadása, szerkesztése, törlése és megnézése (max. 50).</td>
                         <td>Adminisztrátor*</td>
                     </tr>
@@ -417,7 +417,7 @@
                     </tr>
                     <tr data-command="changelog">
                         <td>changelog <code class="optional">verzió</code></td>
-                        <td>A jelenlegi, vagy kiválasztott verzió részletes változáslistája.</td>
+                        <td>A jelenlegi, vagy kiválasztott sasOS verzió részletes változáslistája.</td>
                         <td>-</td>
                     </tr>
                     <tr>
@@ -427,12 +427,12 @@
                     </tr>
                     <tr data-command="help">
                         <td>help <code class="optional">parancs</code></td>
-                        <td>Minden elérhető és egyedi parancs kijelzése vagy egy parancs bővebb ismertetése.</td>
+                        <td>Minden elérhető és egyedi parancs kijelzése, vagy egy parancs bővebb ismertetése.</td>
                         <td>-</td>
                     </tr>
                     <tr>
                         <td>info</td>
-                        <td>Rövid leírás sasOS-ről, segítség a parancsok eléréséhez és elérhetőségek megtekintése.</td>
+                        <td>Rövid leírás sasOS-ről, segítség a parancsok eléréséhez, és elérhetőségek megtekintése.</td>
                         <td>-</td>
                     </tr>
                     <tr>
