--- a/index.html
+++ b/index.html
@@ -10,141 +10,104 @@
     <script src="https://kit.fontawesome.com/3b3f778d59.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm sticky-top">
-        <div class="container-fluid justify-content-center">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Menüsáv lenyitása">
-                <i class="fa-solid fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
-                <ul class="navbar-nav text-center">
-                    <li class="nav-item">
-                        <a class="nav-link fw-bold active" aria-current="page" href="index.html" title="Főbb funkciók megtekintése">Főoldal</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="commands.html" title="Összes parancs megtekintése">Parancsok</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link invite" href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816889494&integration_type=0&scope=bot+applications.commands" target="_blank" title="Meghívás a szerveredre"><img src="media/icon_transparent.png" alt="Ikon" class="nav-icon">Meghívás</a></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="container">
-        <header>
-            <div class="row justify-content-center">
-                <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 title">
-                    <div class="row">
-                        <div class="col-12"><h1>sasOS főbb funkciói</h1></div>
-                        <hr>
-                    </div>
+    <header>
+        <nav>
+            <h2 class="visually-hidden">Ugrás a tartalomhoz</h2> 
+			<a class="visually-hidden-focusable" href="#content">Ugrás a tartalomhoz</a>
+        </nav>
+        <nav class="navbar navbar-expand-sm sticky-top">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Menüsáv lenyitása">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link fw-bold active" aria-current="page" href="index.html" title="Főoldal megtekintése">Főoldal</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="commands.html" title="Összes parancs megtekintése">Parancsok</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ms-auto d-none d-sm-flex">
+                        <li class="nav-item">
+                            <a class="nav-link invite" href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816889494&integration_type=0&scope=bot+applications.commands" target="_blank" title="Meghívás a szerveredre"><img src="media/icon_transparent.png" alt="Ikon" class="nav-icon">Meghívás</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-        </header>
-        <main>
+        </nav>
+    </header>
+    <div class="container-fluid">
+        <main id="content">
             <div class="row justify-content-center">
-                <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 tabcontent moderation-showcase">
-                    <div class="row">
-                        <div class="col-12"><h2>Moderálás</h2></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><h3>Korszerű moderációs parancsok, korábbi eljárások mentése</h3></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><img class="img-fluid gif" src="https://raw.githubusercontent.com/sassvagyok/sasOS-data/refs/heads/main/media/ban.gif" alt="A kitiltás parancsának bemutatása indok és időtartam megadásával."></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><p class="command-showcase">Tagok kitiltása, kirúgása, felfüggesztése és figyelmeztetése</p></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><p class="command-showcase">Üzenetek törlése | Csatornák lezárása | Lassított mód beállítása</p></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><p class="command-showcase">Moderációk feljegyzése, és visszanézése sorszám alapján</p></div>
-                    </div>
+                <div class="col-10 col-sm-10 col-md-8 col-lg-6 col-xl-5 anim">
+                    <h1>sasOS Discord Bot</h1>
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 tabcontent music-showcase">
-                    <div class="row">
-                        <div class="col-12"><h2>Zenelejátszás</h2></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><h3>Zenék lejátszása könnyedén, több száz oldalról</h3></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><img class="img-fluid gif" src="https://raw.githubusercontent.com/sassvagyok/sasOS-data/refs/heads/main/media/cc.gif" alt="A lejátszás parancsának bemutatása 'epic gaming music' paraméter megadásával."></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><p class="command-showcase">Lejátszás | Zeneszöveg keresése | Megkeverés | Filterek alkalmazása</p></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><p class="command-showcase">Átugrás | Visszalépés | Megállítás | Elindítás | Ismétlés állítása</p></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><p class="command-showcase">Zenelejátszás ranghoz vagy csatornához kötése</p></div>
-                    </div>
+                <div class="col-10 col-sm-10 col-md-8 col-lg-5 col-xl-4 mb-5 tabcontent changelog-showcase anim">
+                    <p>sasOS egy teljesen ingyenes, rendszeresen fejlesztett JavaScript alapú Discord Bot, rengeteg különféle funkcióval.</p>
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 tabcontent config-showcase">
-                    <div class="row">
-                        <div class="col-12"><h2>Testreszabás</h2></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><h3>Egyedi funkciók hozzáadása a szerveredhez</h3></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><img class="img-fluid gif" src="https://raw.githubusercontent.com/sassvagyok/sasOS-data/refs/heads/main/media/play.gif" alt="Az egyedi parancs hozzáadásának bemutatása 'sasos' nevű paranccsal és 'A legjobb bot' válasz megadásával."></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><p class="command-showcase">Egyedi parancsok létrehozása | Üdvözlő- és Búcsúüzenet beállítása</p></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><p class="command-showcase">Tagok rangjainak megjegyzése | Automatikus rangok beállítása</p></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><p class="command-showcase">Parancsok kikapcsolása vagy egyedi ranghoz kötése</p></div>
-                    </div>
+                <div class="col-10 col-sm-10 col-md-8 col-lg-6 col-xl-5 anim">
+                    <h2>Főbb funkciók</h2>
+                    <hr>
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 tabcontent misc-showcase">
-                    <div class="row">
-                        <div class="col-12"><h2>Ezenfelül</h2></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><h3>További parancsok és funkciók</h3></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><img class="img-fluid gif" src="https://raw.githubusercontent.com/sassvagyok/sasOS-data/refs/heads/main/media/userinfo.gif" alt="Információk lekérése felhasználókról bemutatása 'matte' nevű felhasználóról."></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><p class="command-showcase">Információk a szerverről, tagokról | Profilképek lekérése</p></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><p class="command-showcase">ASCII-kép keszítése | Szóharc | Nekosbest API</p></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><p class="command-showcase">8ball | Kő-papír-olló | Érme feldobás</p></div>
-                    </div>
+                <div class="col-10 col-sm-10 col-md-8 col-lg-5 col-xl-4 mx-4 mb-5 tabcontent moderation-showcase anim">
+                    <h3>Moderálás</h3>
+                    <h4>Korszerű moderációs parancsok, korábbi eljárások mentése</h4>
+                    <img class="img-fluid gif" src="https://raw.githubusercontent.com/sassvagyok/sasOS-data/refs/heads/main/media/ban.gif" alt="A kitiltás parancsának bemutatása indok és időtartam megadásával.">
+                    <ul class="command-showcase">
+                        <li>Moderációk feljegyzése, és lekérése sorszám alapján</li>
+                        <li>Tagok kitiltása, Kirúgása, Felfüggesztése, Figyelmeztetése</li>
+                        <li>Csatornák lezárása | Üzenetek törlése</li>
+                    </ul>
+                </div>
+                <div class="col-10 col-sm-10 col-md-8 col-lg-5 col-xl-4 mx-4 mb-5 tabcontent music-showcase anim">
+                    <h3>Zenelejátszás</h3>
+                    <h4>Zenék lejátszása könnyedén, több száz oldalról</h4>
+                    <img class="img-fluid gif" src="https://raw.githubusercontent.com/sassvagyok/sasOS-data/refs/heads/main/media/play.gif" alt="A lejátszás parancsának bemutatása 'epic gaming music' paraméter megadásával.">
+                    <ul class="command-showcase">
+                        <li>Lejátszás | Zeneszöveg keresése | Megkeverés | Filterek alkalmazása</li>
+                        <li>Átugrás | Visszalépés | Megállítás | Elindítás | Ismétlés állítása</li>
+                        <li>Zenelejátszás ranghoz vagy csatornához kötése</li>
+                    </ul>
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 title">
-                    <div class="row">
-                        <div class="col-12"><h1>Legutóbbi változások</h1></div>
-                        <hr>
-                    </div>
+                <div class="col-10 col-sm-10 col-md-8 col-lg-5 col-xl-4 mx-4 mb-5 tabcontent config-showcase anim">
+                    <h3>Testreszabás</h3>
+                    <h4>Egyedi funkciók hozzáadása a szerveredhez</h4><img class="img-fluid gif" src="https://raw.githubusercontent.com/sassvagyok/sasOS-data/refs/heads/main/media/cc.gif" alt="Az egyedi parancs hozzáadásának bemutatása 'sasos' nevű paranccsal és 'A legjobb bot' válasz megadásával.">
+                    <ul class="command-showcase">
+                        <li>Egyedi parancsok létrehozása | Üdvözlő- és Búcsúüzenet beállítása</li>
+                        <li>Tagok rangjainak megjegyzése | Automatikus rangok beállítása</li>
+                        <li>Parancsok kikapcsolása, vagy egyedi ranghoz kötése</li>
+                    </ul>
+                </div>
+                <div class="col-10 col-sm-10 col-md-8 col-lg-5 col-xl-4 mx-4 mb-5 tabcontent misc-showcase anim">
+                    <h3>Ezenfelül</h3>
+                    <h4>További parancsok és funkciók</h4>
+                    <img class="img-fluid gif" src="https://raw.githubusercontent.com/sassvagyok/sasOS-data/refs/heads/main/media/userinfo.gif" alt="Információk lekérése felhasználókról bemutatása 'matte' nevű felhasználóról.">
+                    <ul class="command-showcase">
+                        <li>Információk a szerverről, tagokról | Profilképek lekérése</li>
+                        <li>ASCII-kép keszítése szövegből | Szóharc | Nekosbest API képek</li>
+                        <li>8ball | Kő-papír-olló | Érme feldobás</li>
+                    </ul>
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 tabcontent changelog-showcase">
-                    <div class="row">
-                        <div class="col-12">
-                            <p id="changelog">...</p>
-                        </div>
-                    </div>
+                <div class="col-10 col-sm-10 col-md-8 col-lg-6 col-xl-5 anim">
+                    <h2>Legutóbbi változások</h2>
+                    <hr>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-10 col-sm-10 col-md-8 col-lg-7 col-xl-5 tabcontent changelog-showcase anim">
+                    <p id="changelog">...</p>
                 </div>
             </div>
         </main>
@@ -153,12 +116,8 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12 text-center">
-                    <div class="row">
-                        <div class="col-12"><p class="footer-links"><a href="#top">Vissza a tetejére</a></p></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12"><p class="footer-links"><a href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816889494&integration_type=0&scope=bot+applications.commands" target="_blank">Meghívás</a> | <a href="https://discord.gg/s8XtzBasQF" target="_blank">Support Szerver</a> | <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank">Github</a> |</p><p id="version">...</p></div>
-                    </div>
+                    <p class="footer-links"><a href="#top">Vissza a tetejére</a></p><br>
+                    <p class="footer-links"><a href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816889494&integration_type=0&scope=bot+applications.commands" target="_blank">Meghívás</a> | <a href="https://discord.gg/s8XtzBasQF" target="_blank">Support Szerver</a> | <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank">Github</a> |</p><p id="version">...</p>
                 </div>
             </div>
         </div>
