--- a/commands.html
+++ b/commands.html
@@ -15,7 +15,7 @@
             <h2 class="visually-hidden">Ugrás a tartalomhoz</h2> 
 			<a class="visually-hidden-focusable" href="#content">Ugrás a tartalomhoz</a>
         </nav>
-        <nav class="navbar navbar-expand-sm sticky-top">
+        <nav class="navbar navbar-expand-sm fixed-top">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Menüsáv lenyitása">
                     <i class="fa-solid fa-bars"></i>
@@ -55,7 +55,7 @@
                     <caption class="text-center">
                         <details>
                             <summary>Súgó</summary>
-                            <p><strong>Szükséges</strong>: ez a jogosultság/állapot kell a parancs használatához</p>
+                            <p><strong>Szükséges</strong>: ez a jogosultság/állapot kell a parancs használatához.</p>
                         </details>
                     </caption>
                     <thead>
