--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2 class="visually-hidden">Ugrás a tartalomhoz</h2> 
 			<a class="visually-hidden-focusable" href="#content">Ugrás a tartalomhoz</a>
         </nav>
-        <nav class="navbar navbar-expand-sm sticky-top">
+        <nav class="navbar navbar-expand-sm fixed-top">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Menüsáv lenyitása">
                     <i class="fa-solid fa-bars"></i>
