--- a/commands/music/pause.html
+++ b/commands/music/pause.html
@@ -347,8 +347,12 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12 text-center">
-                    <p class="footer-links"><a href="#top">Vissza a tetejére</a></p><br>
-                    <p class="footer-links"><a href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816889494&integration_type=0&scope=bot+applications.commands" target="_blank">Meghívás</a> | <a href="https://discord.gg/s8XtzBasQF" target="_blank">Support Szerver</a> | <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank">Github</a> |</p><p id="version">...</p>
+                    <p class="footer-icons">
+                        <a href="https://discord.gg/s8XtzBasQF" target="_blank"><i class="fa-brands fa-discord"></i></a>
+                        <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    </p>
+                    <p class="footer-text">|</p>
+                    <p id="version">...</p>
                 </div>
             </div>
         </div>
