--- a/commands/configuration/membercounter.html
+++ b/commands/configuration/membercounter.html
@@ -367,8 +367,8 @@
             <div class="row justify-content-center">
                 <div class="col-md-12 text-center">
                     <p class="footer-icons">
-                        <a href="https://discord.gg/s8XtzBasQF" target="_blank"><i class="fa-brands fa-discord"></i></a>
-                        <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://discord.gg/s8XtzBasQF" target="_blank" title="Support szerver"><i class="fa-brands fa-discord"></i></a>
+                        <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank" title="Github"><i class="fa-brands fa-github"></i></a>
                     </p>
                     <p class="footer-text">|</p>
                     <p id="version">...</p>
