--- a/commands/configuration/toggle.html
+++ b/commands/configuration/toggle.html
@@ -336,7 +336,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-10 col-sm-10 col-md-8 col-lg-7 col-xl-5 mb-4 py-4 tabcontent command-info anim">
-                    <h3 class="command">Alparancsok</h3>
+                    <h3 class="command">Paraméterek</h3>
                     <hr>
                     <ul>
                         <li>
@@ -359,8 +359,8 @@
             <div class="row justify-content-center">
                 <div class="col-md-12 text-center">
                     <p class="footer-icons">
-                        <a href="https://discord.gg/s8XtzBasQF" target="_blank"><i class="fa-brands fa-discord"></i></a>
-                        <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://discord.gg/s8XtzBasQF" target="_blank" title="Support szerver"><i class="fa-brands fa-discord"></i></a>
+                        <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank" title="Github"><i class="fa-brands fa-github"></i></a>
                     </p>
                     <p class="footer-text">|</p>
                     <p id="version">...</p>
