--- a/commands/miscellaneous/szókeresés.html
+++ b/commands/miscellaneous/szókeresés.html
@@ -28,7 +28,7 @@
                     </ul>
                     <ul class="navbar-nav flex-fill justify-content-center">
                         <li class="nav-item">
-                            <a class="nav-link" href="../../index.html" title="Vissza a főoldalra"><img src="../../media/icon_transparent_zoomed_in.png" alt="Ikon" class="nav-icon"></a>
+                            <a class="nav-link" href="/../../index/" title="Vissza a főoldalra"><img src="../../media/icon_transparent_zoomed_in.png" alt="Ikon" class="nav-icon"></a>
                         </li>
                     </ul>
                     <ul class="navbar-nav flex-fill justify-content-end">
@@ -59,49 +59,49 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        <a href="../moderation/ban.html">Ban</a>
+                                        <a href="/../moderation/ban/">Ban</a>
                                     </li>
                                     <li>
-                                        <a href="../moderation/bans.html">Bans</a>
+                                        <a href="/../moderation/bans/">Bans</a>
                                     </li>
                                     <li>
-                                        <a href="../moderation/clear.html">Clear</a>
+                                        <a href="/../moderation/clear/">Clear</a>
                                     </li>
                                     <li>
-                                        <a href="../moderation/kick.html">Kick</a>
+                                        <a href="/../moderation/kick/">Kick</a>
                                     </li>
                                     <li>
-                                        <a href="../moderation/kicks.html">Kicks</a>
+                                        <a href="/../moderation/kicks/">Kicks</a>
                                     </li>
                                     <li>
-                                        <a href="../moderation/lockdown.html">Lockdown</a>
+                                        <a href="/../moderation/lockdown/">Lockdown</a>
                                     </li>
                                     <li>
-                                        <a href="../moderation/moderations.html">Moderations</a>
+                                        <a href="/../moderation/moderations/">Moderations</a>
                                     </li>
                                     <li>
-                                        <a href="../moderation/removetimeout.html">Removetimeout</a>
+                                        <a href="/../moderation/removetimeout/">Removetimeout</a>
                                     </li>
                                     <li>
-                                        <a href="../moderation/slowmode.html">Slowmode</a>
+                                        <a href="/../moderation/slowmode/">Slowmode</a>
                                     </li>
                                     <li>
-                                        <a href="../moderation/timeout.html">Timeout</a>
+                                        <a href="/../moderation/timeout/">Timeout</a>
                                     </li>
                                     <li>
-                                        <a href="../moderation/timeouts.html">Timeouts</a>
+                                        <a href="/../moderation/timeouts/">Timeouts</a>
                                     </li>
                                     <li>
-                                        <a href="../moderation/unban.html">Unban</a>
+                                        <a href="/../moderation/unban/">Unban</a>
                                     </li>
                                     <li>
-                                        <a href="../moderation/unlockdown.html">Unlockdown</a>
+                                        <a href="/../moderation/unlockdown/">Unlockdown</a>
                                     </li>
                                     <li>
-                                        <a href="../moderation/warn.html">Warn</a>
+                                        <a href="/../moderation/warn/">Warn</a>
                                     </li>
                                     <li>
-                                        <a href="../moderation/warns.html">Warns</a>
+                                        <a href="/../moderation/warns/">Warns</a>
                                     </li>
                                 </ul>
                             </div>
@@ -117,58 +117,58 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        <a href="../music/autoplay.html">Autoplay</a>
+                                        <a href="/../music/autoplay/">Autoplay</a>
                                     </li>
                                     <li>
-                                        <a href="../music/clearqueue.html">Clearqueue</a>
+                                        <a href="/../music/clearqueue/">Clearqueue</a>
                                     </li>
                                     <li>
-                                        <a href="../music/filter.html">Filter</a>
+                                        <a href="/../music/filter/">Filter</a>
                                     </li>
                                     <li>
-                                        <a href="../music/loop.html">Loop</a>
+                                        <a href="/../music/loop/">Loop</a>
                                     </li>
                                     <li>
-                                        <a href="../music/lyrics.html">Lyrics</a>
+                                        <a href="/../music/lyrics/">Lyrics</a>
                                     </li>
                                     <li>
-                                        <a href="../music/most.html">Most</a>
+                                        <a href="/../music/most/">Most</a>
                                     </li>
                                     <li>
-                                        <a href="../music/pause.html">Pause</a>
+                                        <a href="/../music/pause/">Pause</a>
                                     </li>
                                     <li>
-                                        <a href="../music/play.html">Play</a>
+                                        <a href="/../music/play/">Play</a>
                                     </li>
                                     <li>
-                                        <a href="../music/previous.html">Previous</a>
+                                        <a href="/../music/previous/">Previous</a>
                                     </li>
                                     <li>
-                                        <a href="../music/queue.html">Queue</a>
+                                        <a href="/../music/queue/">Queue</a>
                                     </li>
                                     <li>
-                                        <a href="../music/remove.html">Remove</a>
+                                        <a href="/../music/remove/">Remove</a>
                                     </li>
                                     <li>
-                                        <a href="../music/restart.html">Restart</a>
+                                        <a href="/../music/restart/">Restart</a>
                                     </li>
                                     <li>
-                                        <a href="../music/resume.html">Resume</a>
+                                        <a href="/../music/resume/">Resume</a>
                                     </li>
                                     <li>
-                                        <a href="../music/seek.html">Seek</a>
+                                        <a href="/../music/seek/">Seek</a>
                                     </li>
                                     <li>
-                                        <a href="../music/shuffle.html">Shuffle</a>
+                                        <a href="/../music/shuffle/">Shuffle</a>
                                     </li>
                                     <li>
-                                        <a href="../music/skip.html">Skip</a>
+                                        <a href="/../music/skip/">Skip</a>
                                     </li>
                                     <li>
-                                        <a href="../music/stop.html">Stop</a>
+                                        <a href="/../music/stop/">Stop</a>
                                     </li>
                                     <li>
-                                        <a href="../music/volume.html">Volume</a>
+                                        <a href="/../music/volume/">Volume</a>
                                     </li>
                                 </ul>
                             </div>
@@ -184,40 +184,40 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        <a href="../configuration/autoroles.html">Autoroles</a>
+                                        <a href="/../configuration/autoroles/">Autoroles</a>
                                     </li>
                                     <li>
-                                        <a href="../configuration/customcommand.html">Customcommand</a>
+                                        <a href="/../configuration/customcommand/">Customcommand</a>
                                     </li>
                                     <li>
-                                        <a href="../configuration/djrole.html">Djrole</a>
+                                        <a href="/../configuration/djrole/">Djrole</a>
                                     </li>
                                     <li>
-                                        <a href="../configuration/farewell.html">Farewell</a>
+                                        <a href="/../configuration/farewell/">Farewell</a>
                                     </li>
                                     <li>
-                                        <a href="../configuration/membercounter.html">Membercounter</a>
+                                        <a href="/../configuration/membercounter/">Membercounter</a>
                                     </li>
                                     <li>
-                                        <a href="../configuration/modconfig.html">Modconfig</a>
+                                        <a href="/../configuration/modconfig/">Modconfig</a>
                                     </li>
                                     <li>
-                                        <a href="../configuration/permissions.html">Permissions</a>
+                                        <a href="/../configuration/permissions/">Permissions</a>
                                     </li>
                                     <li>
-                                        <a href="../configuration/saveroles.html">Saveroles</a>
+                                        <a href="/../configuration/saveroles/">Saveroles</a>
                                     </li>
                                     <li>
-                                        <a href="../configuration/serversettings.html">Serversettings</a>
+                                        <a href="/../configuration/serversettings/">Serversettings</a>
                                     </li>
                                     <li>
-                                        <a href="../configuration/toggle.html">Toggle</a>
+                                        <a href="/../configuration/toggle/">Toggle</a>
                                     </li>
                                     <li>
-                                        <a href="../configuration/welcome.html">Welcome</a>
+                                        <a href="/../configuration/welcome/">Welcome</a>
                                     </li>
                                     <li>
-                                        <a href="../configuration/zenecsatorna.html">Zenecsatorna</a>
+                                        <a href="/../configuration/zenecsatorna/">Zenecsatorna</a>
                                     </li>
                                 </ul>
                             </div>
@@ -233,55 +233,55 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        <a href="8ball.html">8ball</a>
+                                        <a href="/8ball/">8ball</a>
                                     </li>
                                     <li>
-                                        <a href="ascii.html">Ascii</a>
+                                        <a href="/ascii/">Ascii</a>
                                     </li>
                                     <li>
-                                        <a href="avatár.html">Avatár</a>
+                                        <a href="/avatár/">Avatár</a>
                                     </li>
                                     <li>
-                                        <a href="coinflip.html">Coinflip</a>
+                                        <a href="/coinflip/">Coinflip</a>
                                     </li>
                                     <li>
-                                        <a href="echo.html">Echo</a>
+                                        <a href="/echo/">Echo</a>
                                     </li>
                                     <li>
-                                        <a href="emojify.html">Emojify</a>
+                                        <a href="/emojify/">Emojify</a>
                                     </li>
                                     <li>
-                                        <a href="kőpapírolló.html">Kőpapírolló</a>
+                                        <a href="/kőpapírolló/">Kőpapírolló</a>
                                     </li>
                                     <li>
-                                        <a href="miatyánk.html">Miatyánk</a>
+                                        <a href="/miatyánk/">Miatyánk</a>
                                     </li>
                                     <li>
-                                        <a href="nekosbest.html">Nekosbest</a>
+                                        <a href="/nekosbest/">Nekosbest</a>
                                     </li>
                                     <li>
-                                        <a href="nem.html">Nem</a>
+                                        <a href="/nem/">Nem</a>
                                     </li>
                                     <li>
-                                        <a href="randomszám.html">Randomszám</a>
+                                        <a href="/randomszám/">Randomszám</a>
                                     </li>
                                     <li>
-                                        <a href="replace.html">Replace</a>
+                                        <a href="/replace/">Replace</a>
                                     </li>
                                     <li>
-                                        <a href="sadstory.html">Sadstory</a>
+                                        <a href="/sadstory/">Sadstory</a>
                                     </li>
                                     <li>
-                                        <a href="serverinfo.html">Serverinfo</a>
+                                        <a href="/serverinfo/">Serverinfo</a>
                                     </li>
                                     <li>
-                                        <a href="szóharc.html">Szóharc</a>
+                                        <a href="/szóharc/">Szóharc</a>
                                     </li>
                                     <li>
-                                        <a href="szókeresés.html" class="active">Szókeresés</a>
+                                        <a href="/szókeresés/" class="active">Szókeresés</a>
                                     </li>
                                     <li>
-                                        <a href="userinfo.html">Userinfo</a>
+                                        <a href="/userinfo/">Userinfo</a>
                                     </li>
                                 </ul>
                             </div>
@@ -297,19 +297,19 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        <a href="../information/changelog.html">Changelog</a>
+                                        <a href="/../information/changelog/">Changelog</a>
                                     </li>
                                     <li>
-                                        <a href="../information/feedback.html">Feedback</a>
+                                        <a href="/../information/feedback/">Feedback</a>
                                     </li>
                                     <li>
-                                        <a href="../information/help.html">Help</a>
+                                        <a href="/../information/help/">Help</a>
                                     </li>
                                     <li>
-                                        <a href="../information/info.html">Info</a>
+                                        <a href="/../information/info/">Info</a>
                                     </li>
                                     <li>
-                                        <a href="../information/status.html">Status</a>
+                                        <a href="/../information/status/">Status</a>
                                     </li>
                                 </ul>
                             </div>
